--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
               <tr>
                 <td colspan="2" style="height:206px;">
                   <div style="float:left">Giá</div>
-                  <div style="float:right">329,000/1 tháng	</div>
+                  <div style="float:right" class="cost">329,000/1 tháng	</div>
                 </td>
               </tr>
             </table>
@@ -834,28 +834,28 @@
           <div class="type-user type-user-student">
             <ui class="comment-block">
               <li class="comment-block__item">
-                <figure><img src="images/icon-user-comment-1.png" class="img-circle"><span class="commenter">Hồ Gia Bảo</span><span class="description">Sinh vien_Bình Dương</span></figure>
+                <figure><img src="images/giabao_testimonial_avatar.png" class="img-circle"><span class="commenter">Hồ Gia Bảo</span><span class="description">Sinh vien_Bình Dương</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Mình ở vùng ngoại ô thành phố nên việc đi học TOEIC thật sự rất khó khăn. Từ khi biết đến Gia sư TOEIC, mình không cần phải đi xa nữa mà chỉ cần chăm chỉ học trên đây thôi. Điều mình thích nhất là việc chia bài luyện tâp theo cấp độ từ dễ đến khó, nên không gây ra tình trạng nản chí cho người học. Khi có vấn đề gì thắc mắc mình cứ email hỏi, các anh chị trả lời rất nhiệt tình và chi tiết.</p>
                   <p class="comment--mobile"> Mình ở vùng ngoại ô thành phố nên việc đi học TOEIC thật sự rất khó khăn. Từ khi biết đến Gia sư TOEIC, mình không cần phải đi xa nữa mà chỉ cần chăm chỉ học trên đây thôi.<span class="continue">Điều mình thích nhất là việc chia bài luyện tâp theo cấp độ từ dễ đến khó, nên không gây ra tình trạng nản chí cho người học. Khi có vấn đề gì thắc mắc mình cứ email hỏi, các anh chị trả lời rất nhiệt tình và chi tiết.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item comment-block__item--2">
-                <figure><img src="images/icon-user-comment-2.png" class="img-circle"><span class="commenter">Nguyễn Thị Thuỳ Lĩnh</span><span class="description">Sinh vien_TP.HCM</span></figure>
+                <figure><img src="images/thuylinh_testimonial_avatar.png" class="img-circle"><span class="commenter">Nguyễn Thị Thuỳ Lĩnh</span><span class="description">Sinh vien_TP.HCM</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Mình đã thử học với trang Gia sư TOEIC được 2 tháng rồi, điểm đầu vào của mình là 280 và kỳ thi TOEIC vừa rồi mình được 620 điểm, vượt chỉ tiêu trường. Hiệu quả trang đem lại cho mình rất cao, đề luyện nhiều, mấy anh chị theo sát học viên nhắc nhở. Trang mình còn có giải thích đáp án nên rất tốt để cải thiện trong quá trình học.</p>
                   <p class="comment--mobile">Mình đã thử học với trang Gia sư TOEIC được 2 tháng rồi, điểm đầu vào của mình là 280 và kỳ thi TOEIC vừa rồi mình được 620 điểm, vượt chỉ tiêu trường.<span class="continue"> Hiệu quả trang đem lại cho mình rất cao, đề luyện nhiều, mấy anh chị theo sát học viên nhắc nhở. Trang mình còn có giải thích đáp án nên rất tốt để cải thiện trong quá trình học.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item">
-                <figure><img src="images/icon-user-comment-4.png" class="img-circle"><span class="commenter">Nguyễn Văn Quang</span><span class="description">Sinh vien_Hà Nội</span></figure>
+                <figure><img src="images/vanquang_testimonial_avatar.png" class="img-circle"><span class="commenter">Nguyễn Văn Quang</span><span class="description">Sinh vien_Hà Nội</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Mình thấy rất hào hứng với giao diện và cách học mới này. Mình khá bận nên việc luyện tập các phần dựa trên lộ trình gợi ý của hệ thống giúp mình tiết kiệm được rất nhiều thời gian. Việc thực hành thường xuyên và linh hoạt về thời gian tạo cho mình một phản xạ tốt về cách làm bài thi TOEIC. Kết quả là mình đạt được 890 điểm. Cảm ơn Gia sư TOEIC nhiều!</p>
                   <p class="comment--mobile">Mình thấy rất hào hứng với giao diện và cách học mới này.<span class="continue"> Mình khá bận nên việc luyện tập các phần dựa trên lộ trình gợi ý của hệ thống giúp mình tiết kiệm được rất nhiều thời gian. Việc thực hành thường xuyên và linh hoạt về thời gian tạo cho mình một phản xạ tốt về cách làm bài thi TOEIC. Kết quả là mình đạt được 890 điểm. Cảm ơn Gia sư TOEIC nhiều!</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item comment-block__item--2">
-                <figure><img src="images/icon-user-comment-2.png" class="img-circle"><span class="commenter">Lê Tử Toàn</span><span class="description">Sinh vien_TP.HCM</span></figure>
+                <figure><img src="images/tutoan_testimonial_avatar.png" class="img-circle"><span class="commenter">Lê Tử Toàn</span><span class="description">Sinh vien_TP.HCM</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Khi tự học mình sợ nhất là biết đáp án mà không biết tại sao lại chọn đáp án đó, nhưng khi luyện với Gia sư TOEIC thì mỗi câu luyện tập đều được dịch nghĩa, giải thích chi tiết, rõ ràng cho từng đáp án. Mình cảm thấy Gia sư TOEIC thật sự là một kênh luyện TOEIC có hệ thống và chất lượng không khác nhiều so với các lớp tiếng Anh mình theo học trước đây!</p>
                   <p class="comment--mobile">Khi tự học mình sợ nhất là biết đáp án mà không biết tại sao lại chọn đáp án đó, nhưng khi luyện với Gia sư TOEIC thì mỗi câu luyện tập đều được dịch nghĩa, giải thích chi tiết, rõ ràng cho từng đáp án.<span class="continue"> Mình cảm thấy Gia sư TOEIC thật sự là một kênh luyện TOEIC có hệ thống và chất lượng không khác nhiều so với các lớp tiếng Anh mình theo học trước đây!</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
@@ -866,28 +866,28 @@
           <div class="type-user type-user-worker active">
             <ui class="comment-block">
               <li class="comment-block__item">
-                <figure><img src="images/icon-user-comment-1.png" class="img-circle"><span class="commenter">Ngô Thị Diệu Liên</span><span class="description">GVCIII_TP.HCM</span></figure>
+                <figure><img src="images/dieulien_testimonial_avatar.png" class="img-circle"><span class="commenter">Ngô Thị Diệu Liên</span><span class="description">GVCIII_TP.HCM</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Trước khi học mình cũng hơi lo vì tính mình nhanh chán nên chỉ sợ học được vài bữa lại bỏ. Nhưng khi học rồi thì mình thấy thích lắm. Chương trình đặt ra nhiều đích từ gần đến xa, tạo cảm giác rõ ràng và giúp người học có động lực để phấn đấu. Mình cũng thích bảng xếp hạng tuần nữa, nhìn vào đó mình luôn cố gắng để được lọt vào top.</p>
                   <p class="comment--mobile">Trước khi học mình cũng hơi lo vì tính mình nhanh chán nên chỉ sợ học được vài bữa lại bỏ. Nhưng khi học rồi thì mình thấy thích lắm.<span class="continue"> Chương trình đặt ra nhiều đích từ gần đến xa, tạo cảm giác rõ ràng và giúp người học có động lực để phấn đấu. Mình cũng thích bảng xếp hạng tuần nữa, nhìn vào đó mình luôn cố gắng để được lọt vào top.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item comment-block__item--2">
-                <figure><img src="images/icon-user-comment-2.png" class="img-circle"><span class="commenter">Mai thế Đặng</span><span class="description">Kỹ sư_Hà Nội</span></figure>
+                <figure><img src="images/thedang_testimonial_avatar.png" class="img-circle"><span class="commenter">Mai thế Đặng</span><span class="description">Kỹ sư_Hà Nội</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Trước khi học mình cũng khá lo vì không biết nên học từ đâu, học như thế nào. Điều tôi thích nhất là trang web đưa ra cho tôi lộ trình học hợp lý, giải thích tỉ mỉ các phần và cho tôi biết được mình nên học nhiều ở phần nào. Chương trình rất có ích cho những người vừa học vừa làm nên tôi cũng giới thiệu cho bạn bè học tập. Xin cảm ơn!</p>
                   <p class="comment--mobile">Trước khi học mình cũng khá lo vì không biết nên học từ đâu, học như thế nào. Điều tôi thích nhất là trang web đưa ra cho tôi lộ trình học hợp lý, giải thích tỉ mỉ các phần và cho tôi biết được mình nên học nhiều ở phần nào.<span class="continue"> Chương trình rất có ích cho những người vừa học vừa làm nên tôi cũng giới thiệu cho bạn bè học tập. Xin cảm ơn!</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item">
-                <figure><img src="images/icon-user-comment-4.png" class="img-circle"><span class="commenter">Nguyễn Thị Xuân</span><span class="description">NVKT_Hải Dương</span></figure>
+                <figure><img src="images/xuan_testimonial_avatar.png" class="img-circle"><span class="commenter">Nguyễn Thị Xuân</span><span class="description">NVKT_Hải Dương</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Học trên web rất tiện và mỗi phần ôn luyện đều có tính thời gian, tạo cảm giác sát với khi thi thật nên người học quen dần, phản ứng nhanh. Chị là người đi làm và đã có gia đình nên cũng khá hạn chế về thời gian, nên chị rất vui vì đã có Gia sư TOEIC giúp chị trong việc học.</p>
                   <p class="comment--mobile">Học trên web rất tiện và mỗi phần ôn luyện đều có tính thời gian, tạo cảm giác sát với khi thi thật nên người học quen dần, phản ứng nhanh.<span class="continue"> Chị là người đi làm và đã có gia đình nên cũng khá hạn chế về thời gian, nên chị rất vui vì đã có Gia sư TOEIC giúp chị trong việc học.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item comment-block__item--2">
-                <figure><img src="images/icon-user-comment-2.png" class="img-circle"><span class="commenter">Vũ Phượng</span><span class="description">NV_TP.HCM</span></figure>
+                <figure><img src="images/vuphuong_testimonial_avatar.png" class="img-circle"><span class="commenter">Vũ Phượng</span><span class="description">NV_TP.HCM</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Mình gửi lời cảm ơn chân thành nhất đến Gia sư TOEIC nhé, mình rất vui với kết quả đạt được là 760 sau một tháng luyện trên trang. Mình cảm thấy chương trình học trên Gia sư TOEIC cực kì hay và hiệu quả luôn, ngoài ra mình luôn nhận được sự hỗ trợ vô cùng nhiệt tình và dễ thương từ các bạn ở đây. Mục tiêu tiếp theo của mình là 850 và mình nghĩ Gia sư TOEIC sẽ giúp mình đạt được điều đó.</p>
                   <p class="comment--mobile">Mình gửi lời cảm ơn chân thành nhất đến Gia sư TOEIC nhé, mình rất vui với kết quả đạt được là 760 sau một tháng luyện trên trang.<span class="continue"> Mình cảm thấy chương trình học trên Gia sư TOEIC cực kì hay và hiệu quả luôn, ngoài ra mình luôn nhận được sự hỗ trợ vô cùng nhiệt tình và dễ thương từ các bạn ở đây. Mục tiêu tiếp theo của mình là 850 và mình nghĩ Gia sư TOEIC sẽ giúp mình đạt được điều đó.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
