--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           </div>
           <div class="header__menu__right">
             <ul class="list-menu">
-              <li class="list-menu__item"><a href="JavaScript:;" title="Đăng nhập" data-form data-type-form="data-form-login">ĐĂNG NHẬP</a></li>
-              <li class="list-menu__item"><a href="JavaScript:;" title="Đăng ký" data-form data-type-form="data-form-register">ĐĂNG KÝ</a></li>
+              <li class="list-menu__item login-link"><a href="JavaScript:;" title="Đăng nhập" data-form data-type-form="data-form-login">ĐĂNG NHẬP</a></li>
+              <li class="list-menu__item login-link"><a href="JavaScript:;" title="Đăng ký" data-form data-type-form="data-form-register">ĐĂNG KÝ</a></li>
             </ul>
             <button type="button" data-btn-submenu class="btn-menu"> <img src="images/icon-solap.png" alt="menu" data-submenu-close><img src="images/icon-menu.png" alt="menu" data-submenu-open></button>
           </div>
@@ -88,8 +88,7 @@
             </form>
           </div>
           <div class="notice-pass"><span class="dont-fogot">Bạn quên mật khẩu?</span><a href="#" title="new password" class="new-pass">Tạo mật khẩu mới</a></div>
-          <figure><a href="" title="fb"><img src="images/icon-facebook.png" alt="fb"></a></figure>
-          <button type="button" class="button-register banner__login__fb icon-Ic_fb">ĐĂNG KÝ BẰNG FACEBOOK</button>
+          <button type="button" class="button-register banner__login__fb icon-Ic_fb">ĐĂNG NHẬP BẰNG FACEBOOK</button>
         </div>
         <div data-next-page data-target-page=".describe-user" class="button-next icon icon-bt_down"></div>
       </div>
@@ -290,7 +289,7 @@
                   <p class="item-title">Bạn chỉ cần học theo gợi ý của hệ thống để vượt qua cột mốc, và khi vượt qua cột mốc, bạn đã tăng được 50 điểm TOEIC!</p>
                 </div>
                 <div class="col-md-8">
-                  <figure><img src="images/2_matnentang_lotrinh_phancanluyen.png" alt="hinh"><span class="desc-img">Hệ thống đang khuyến khích luyện 3 phần: Listening Part 1, Listening Part 2 và Reading Part 5: Từ loại.Bạn cần đạt được độ chính xác khi làm bài ở Listening Part 1 là 45%, Listening Part 2 là 45% và Reading Part 5: Từ loại là 45% để có thể tăng 50 điểm.</span><span class="desc-img">Độ chính xác 45% nghĩa là khi làm 10 câu bạn làm đúng khoảng 5 câu.</span></figure>
+                  <figure><img src="images/2_matnentang_lotrinh_phancanluyen.png" alt="hinh"><span class="desc-img">Hệ thống đang khuyến khích luyện 3 phần: Listening Part 1, Listening Part 2 và Reading Part 5: Từ loại. Bạn cần đạt được độ chính xác khi làm bài ở Listening Part 1 là 45%, Listening Part 2 là 45% và Reading Part 5: Từ loại là 45% để có thể tăng 50 điểm.</span><span class="desc-img">Độ chính xác 45% nghĩa là khi làm 10 câu bạn làm đúng khoảng 5 câu.</span></figure>
                 </div>
               </div>
             </div>
@@ -308,7 +307,7 @@
               <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
               <div class="modal-header__block">
                 <figure><img src="images/tinhnang_lotrinh_blue.png" alt="icon"></figure>
-                <h4 class="title">Lộ trình học và luyện thi</h4>
+                <h4 class="title">Lộ trình học và luyện thi thông minh</h4>
               </div>
               <p class="notice-pop">
                 <figure><img src="images/icon-pen-6.png" alt="icon"></figure><span class="description">Bạn sẽ được Gia sư TOEIC thiết lập một lộ trình học và luyện thi TOEIC tối ưu dành riêng cho bạn chỉ với 2 bước đơn giản:</span>
@@ -328,7 +327,7 @@
                   <p class="item-title">Lộ trình gồm nhiều cột mốc, mỗi cột mốc 50 điểm</p>
                 </div>
                 <div class="col-md-8">
-                  <figure><img src="images/1_matnentang_lotrinh_cotmoc.png" alt="hinh"><span class="desc-img">Lộ trình từ 250 điểm đến 400 điểm, bao gồm 3 cột mốc 300, 350, 400</span></figure>
+                  <figure><img src="images/1_conentang_lotrinh_cotmoc.png" alt="hinh"><span class="desc-img">Lộ trình từ 450 điểm đến 600 điểm, bao gồm 3 cột mốc 500, 550, 600</span></figure>
                 </div>
               </div>
               <div class="items">
@@ -336,7 +335,7 @@
                   <p class="item-title">Bạn chỉ cần học theo gợi ý của hệ thống để vượt qua cột mốc, và khi vượt qua cột mốc, bạn đã tăng được 50 điểm TOEIC!</p>
                 </div>
                 <div class="col-md-8">
-                  <figure><img src="images/2_matnentang_lotrinh_phancanluyen.png" alt="hinh"><span class="desc-img">Hệ thống đang khuyến khích luyện 3 phần: Listening Part 1, Listening Part 2 và Reading Part 5: Từ loại.Bạn cần đạt được độ chính xác khi làm bài ở Listening Part 1 là 45%, Listening Part 2 là 45% và Reading Part 5: Từ loại là 45% để có thể tăng 50 điểm.</span><span class="desc-img">Độ chính xác 45% nghĩa là khi làm 10 câu bạn làm đúng khoảng 5 câu.</span></figure>
+                  <figure><img src="images/2_conentang_lotrinh_phancanluyen.png" alt="hinh"><span class="desc-img">Hệ thống đang khuyến khích luyện 3 phần: Listening Part 1, Listening Part 2 và Reading Part 5: Từ loại.</span><span class="desc-img">Bạn cần đạt được độ chính xác khi làm bài ở Listening Part 1 là 45%, Listening Part 2 là 45% và Reading Part 5: Từ loại là 45% để có thể tăng 50 điểm.</span><span class="desc-img">Độ chính xác 45% nghĩa là khi làm 10 câu bạn làm đúng khoảng 5 câu.</span></figure>
                 </div>
               </div>
             </div>
@@ -705,7 +704,7 @@
                         <p class="save">(Tiết kiệm 15%)</p>
                       </td>
                       <td class="note_month">
-                        <p class="month_3">329.000đ/ 3 tháng </p>
+                        <p class="month_3"> <strong>329</strong><span>.000đ/ 3 tháng </span></p>
                       </td>
                     </tr>
                     <tr>
@@ -714,7 +713,7 @@
                         <p class="save">(Tiết kiệm 15%)</p>
                       </td>
                       <td class="note_month">
-                        <p class="month_6">529.000đ/ 6 tháng </p>
+                        <p class="month_6"> <strong>529</strong><span>.000đ/ 6 tháng </span></p>
                       </td>
                     </tr>
                   </table>
@@ -834,28 +833,28 @@
           <div class="type-user type-user-student">
             <ui class="comment-block">
               <li class="comment-block__item">
-                <figure><img src="images/giabao_testimonial_avatar.png" class="img-circle"><span class="commenter">Hồ Gia Bảo</span><span class="description">Sinh vien_Bình Dương</span></figure>
+                <figure><img src="images/giabao_testimonial_avatar.png" class="img-circle"><span class="commenter">Hồ Gia Bảo</span><span class="description">SV ĐH Thủ Dầu Một_Bình Dương</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Mình ở vùng ngoại ô thành phố nên việc đi học TOEIC thật sự rất khó khăn. Từ khi biết đến Gia sư TOEIC, mình không cần phải đi xa nữa mà chỉ cần chăm chỉ học trên đây thôi. Điều mình thích nhất là việc chia bài luyện tâp theo cấp độ từ dễ đến khó, nên không gây ra tình trạng nản chí cho người học. Khi có vấn đề gì thắc mắc mình cứ email hỏi, các anh chị trả lời rất nhiệt tình và chi tiết.</p>
                   <p class="comment--mobile"> Mình ở vùng ngoại ô thành phố nên việc đi học TOEIC thật sự rất khó khăn. Từ khi biết đến Gia sư TOEIC, mình không cần phải đi xa nữa mà chỉ cần chăm chỉ học trên đây thôi.<span class="continue">Điều mình thích nhất là việc chia bài luyện tâp theo cấp độ từ dễ đến khó, nên không gây ra tình trạng nản chí cho người học. Khi có vấn đề gì thắc mắc mình cứ email hỏi, các anh chị trả lời rất nhiệt tình và chi tiết.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item comment-block__item--2">
-                <figure><img src="images/thuylinh_testimonial_avatar.png" class="img-circle"><span class="commenter">Nguyễn Thị Thuỳ Lĩnh</span><span class="description">Sinh vien_TP.HCM</span></figure>
+                <figure><img src="images/thuylinh_testimonial_avatar.png" class="img-circle"><span class="commenter">Nguyễn Thị Thuỳ Lĩnh</span><span class="description">SV ĐH Luật_TP.HCM</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Mình đã thử học với trang Gia sư TOEIC được 2 tháng rồi, điểm đầu vào của mình là 280 và kỳ thi TOEIC vừa rồi mình được 620 điểm, vượt chỉ tiêu trường. Hiệu quả trang đem lại cho mình rất cao, đề luyện nhiều, mấy anh chị theo sát học viên nhắc nhở. Trang mình còn có giải thích đáp án nên rất tốt để cải thiện trong quá trình học.</p>
                   <p class="comment--mobile">Mình đã thử học với trang Gia sư TOEIC được 2 tháng rồi, điểm đầu vào của mình là 280 và kỳ thi TOEIC vừa rồi mình được 620 điểm, vượt chỉ tiêu trường.<span class="continue"> Hiệu quả trang đem lại cho mình rất cao, đề luyện nhiều, mấy anh chị theo sát học viên nhắc nhở. Trang mình còn có giải thích đáp án nên rất tốt để cải thiện trong quá trình học.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item">
-                <figure><img src="images/vanquang_testimonial_avatar.png" class="img-circle"><span class="commenter">Nguyễn Văn Quang</span><span class="description">Sinh vien_Hà Nội</span></figure>
+                <figure><img src="images/vanquang_testimonial_avatar.png" class="img-circle"><span class="commenter">Nguyễn Văn Quang</span><span class="description">SV ĐH Quốc Tế_Hà Nội</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Mình thấy rất hào hứng với giao diện và cách học mới này. Mình khá bận nên việc luyện tập các phần dựa trên lộ trình gợi ý của hệ thống giúp mình tiết kiệm được rất nhiều thời gian. Việc thực hành thường xuyên và linh hoạt về thời gian tạo cho mình một phản xạ tốt về cách làm bài thi TOEIC. Kết quả là mình đạt được 890 điểm. Cảm ơn Gia sư TOEIC nhiều!</p>
                   <p class="comment--mobile">Mình thấy rất hào hứng với giao diện và cách học mới này.<span class="continue"> Mình khá bận nên việc luyện tập các phần dựa trên lộ trình gợi ý của hệ thống giúp mình tiết kiệm được rất nhiều thời gian. Việc thực hành thường xuyên và linh hoạt về thời gian tạo cho mình một phản xạ tốt về cách làm bài thi TOEIC. Kết quả là mình đạt được 890 điểm. Cảm ơn Gia sư TOEIC nhiều!</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item comment-block__item--2">
-                <figure><img src="images/tutoan_testimonial_avatar.png" class="img-circle"><span class="commenter">Lê Tử Toàn</span><span class="description">Sinh vien_TP.HCM</span></figure>
+                <figure><img src="images/tutoan_testimonial_avatar.png" class="img-circle"><span class="commenter">Lê Tử Toàn</span><span class="description">SV ĐH Kinh Tế_TP.HCM</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Khi tự học mình sợ nhất là biết đáp án mà không biết tại sao lại chọn đáp án đó, nhưng khi luyện với Gia sư TOEIC thì mỗi câu luyện tập đều được dịch nghĩa, giải thích chi tiết, rõ ràng cho từng đáp án. Mình cảm thấy Gia sư TOEIC thật sự là một kênh luyện TOEIC có hệ thống và chất lượng không khác nhiều so với các lớp tiếng Anh mình theo học trước đây!</p>
                   <p class="comment--mobile">Khi tự học mình sợ nhất là biết đáp án mà không biết tại sao lại chọn đáp án đó, nhưng khi luyện với Gia sư TOEIC thì mỗi câu luyện tập đều được dịch nghĩa, giải thích chi tiết, rõ ràng cho từng đáp án.<span class="continue"> Mình cảm thấy Gia sư TOEIC thật sự là một kênh luyện TOEIC có hệ thống và chất lượng không khác nhiều so với các lớp tiếng Anh mình theo học trước đây!</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
@@ -866,7 +865,7 @@
           <div class="type-user type-user-worker active">
             <ui class="comment-block">
               <li class="comment-block__item">
-                <figure><img src="images/dieulien_testimonial_avatar.png" class="img-circle"><span class="commenter">Ngô Thị Diệu Liên</span><span class="description">GVCIII_TP.HCM</span></figure>
+                <figure><img src="images/dieulien_testimonial_avatar.png" class="img-circle"><span class="commenter">Ngô Thị Diệu Liên</span><span class="description">Giáo viên cấp III_TP.HCM</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Trước khi học mình cũng hơi lo vì tính mình nhanh chán nên chỉ sợ học được vài bữa lại bỏ. Nhưng khi học rồi thì mình thấy thích lắm. Chương trình đặt ra nhiều đích từ gần đến xa, tạo cảm giác rõ ràng và giúp người học có động lực để phấn đấu. Mình cũng thích bảng xếp hạng tuần nữa, nhìn vào đó mình luôn cố gắng để được lọt vào top.</p>
                   <p class="comment--mobile">Trước khi học mình cũng hơi lo vì tính mình nhanh chán nên chỉ sợ học được vài bữa lại bỏ. Nhưng khi học rồi thì mình thấy thích lắm.<span class="continue"> Chương trình đặt ra nhiều đích từ gần đến xa, tạo cảm giác rõ ràng và giúp người học có động lực để phấn đấu. Mình cũng thích bảng xếp hạng tuần nữa, nhìn vào đó mình luôn cố gắng để được lọt vào top.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
@@ -880,14 +879,14 @@
                 </quote>
               </li>
               <li class="comment-block__item">
-                <figure><img src="images/xuan_testimonial_avatar.png" class="img-circle"><span class="commenter">Nguyễn Thị Xuân</span><span class="description">NVKT_Hải Dương</span></figure>
+                <figure><img src="images/xuan_testimonial_avatar.png" class="img-circle"><span class="commenter">Nguyễn Thị Xuân</span><span class="description">Nhân viên kĩ thuật_Hải Dương</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Học trên web rất tiện và mỗi phần ôn luyện đều có tính thời gian, tạo cảm giác sát với khi thi thật nên người học quen dần, phản ứng nhanh. Chị là người đi làm và đã có gia đình nên cũng khá hạn chế về thời gian, nên chị rất vui vì đã có Gia sư TOEIC giúp chị trong việc học.</p>
                   <p class="comment--mobile">Học trên web rất tiện và mỗi phần ôn luyện đều có tính thời gian, tạo cảm giác sát với khi thi thật nên người học quen dần, phản ứng nhanh.<span class="continue"> Chị là người đi làm và đã có gia đình nên cũng khá hạn chế về thời gian, nên chị rất vui vì đã có Gia sư TOEIC giúp chị trong việc học.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
                 </quote>
               </li>
               <li class="comment-block__item comment-block__item--2">
-                <figure><img src="images/vuphuong_testimonial_avatar.png" class="img-circle"><span class="commenter">Vũ Phượng</span><span class="description">NV_TP.HCM</span></figure>
+                <figure><img src="images/vuphuong_testimonial_avatar.png" class="img-circle"><span class="commenter">Vũ Phượng</span><span class="description">Công ty TNHH DV Hoàng Kim Phát_TP.HCM</span></figure>
                 <quote><img src="images/icon-quote.png" class="icon-quote">
                   <p class="comment">Mình gửi lời cảm ơn chân thành nhất đến Gia sư TOEIC nhé, mình rất vui với kết quả đạt được là 760 sau một tháng luyện trên trang. Mình cảm thấy chương trình học trên Gia sư TOEIC cực kì hay và hiệu quả luôn, ngoài ra mình luôn nhận được sự hỗ trợ vô cùng nhiệt tình và dễ thương từ các bạn ở đây. Mục tiêu tiếp theo của mình là 850 và mình nghĩ Gia sư TOEIC sẽ giúp mình đạt được điều đó.</p>
                   <p class="comment--mobile">Mình gửi lời cảm ơn chân thành nhất đến Gia sư TOEIC nhé, mình rất vui với kết quả đạt được là 760 sau một tháng luyện trên trang.<span class="continue"> Mình cảm thấy chương trình học trên Gia sư TOEIC cực kì hay và hiệu quả luôn, ngoài ra mình luôn nhận được sự hỗ trợ vô cùng nhiệt tình và dễ thương từ các bạn ở đây. Mục tiêu tiếp theo của mình là 850 và mình nghĩ Gia sư TOEIC sẽ giúp mình đạt được điều đó.</span><span class="small-cm">..</span><span data-show-comment><span class="icon icon-bt_next"></span><span class="icon icon-bt_next"></span></span></p>
