--- a/index-user.html
+++ b/index-user.html
@@ -71,7 +71,7 @@
                   <figure><img src="images/icon-logout.png" alt="icon"></figure><span>Thoát</span></a></li>
             </ul>
             <ul class="list-menu list-menu--mobile">
-              <li class="list-menu__item"><a href="JavaScript:;" title="goc hoc tap">GOC HOC TAP</a></li>
+              <li class="list-menu__item"><a href="JavaScript:;" title="goc hoc tap">GÓC HỌC TẬP</a></li>
             </ul>
             <button type="button" data-btn-submenu class="btn-menu"> <img src="images/icon-solap.png" alt="menu" data-submenu-close><img src="images/icon-menu.png" alt="menu" data-submenu-open></button>
           </div>
